<resources>
    <string name="app_name">Movies</string>
    <string name="unprocessable_entity_exception">An error occurred. Please try later</string>
    <string name="no_internet_exception">There is not internet connection. Please check your settings</string>
    <string name="file_not_found_exception">The file you\'ve selected can\'t be found</string>
    <string name="unauthorized_exception_title">Authorization error</string>
    <string name="unauthorized_exception_msg">An invalid authorization was detected. You\'ll be
        redirected to login</string>
    <string name="error_text_is_empty">Not filled</string>
    <string name="save">Save</string>
    <string name="empty_title">No items yet</string>
    <string name="albums_empty_title">Ops!</string>
    <string name="popular_shows">Popular shows</string>
    <string name="show_average">Average</string>
    <string name="similar_shows">Similar shows</string>
    <string name="first_appearance">First appearance</string>
    <string name="something_went_wrong">SOMETHING WENT WRONG</string>
    <string name="error_title">Oops!</string>
    <string name="overview_sample">A demented serial killer taunts a retired police detective with a series of lurid letters and emails, forcing the ex-cop to undertake a private, and potentially felonious, crusade to bring the killer to justice before he can strike again. Based on the bestselling novel by Stephen King</string>
</resources>
