<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:id="@+id/back_toolbar">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.android.movies.ui.utils.views.CustomImageViewPadding
            android:id="@+id/toolbar_back"
            android:layout_width="@dimen/back_toolbar_size"
            android:layout_height="@dimen/back_toolbar_size"
            app:image_src="@drawable/ic_toolbar_back"
            app:image_padding="@dimen/toolbar_back_padding"
            android:background="@drawable/ic_toolbar_circular_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </com.android.movies.ui.utils.views.CustomImageViewPadding>

        <TextView
            android:id="@+id/coordinator_toolbar_title"
            style="@style/ToolbarTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/toolbar_title_lateral_margin"
            android:layout_marginEnd="@dimen/toolbar_title_lateral_margin"
            android:gravity="left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/toolbar_back"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.Toolbar>